# goofy-ahh-calculator

./: .gitignore  CMakeLists.txt  README.md
.public-include/glad/: glad.h
1.0/: CMakeLists.txt
1.0/src/: config.hpp  main.cpp  main.hpp  maintenance.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
1.0/src/shaders/: main.vert
1.1/: CMakeLists.txt  Inginirium-Homework-Calculator.rar
1.1/dependencies/: freetype.lib
1.1/src/: main.cpp  main.hpp  maintenance.cpp  sprite.cpp  sprite.hpp  transform.hpp  window.hpp
1.1/src/shaders/: text.vert
1.2/: CMakeLists.txt
1.2/src/: config.cpp  config.hpp  main.cpp  main.hpp  maintenance.cpp  maintenance.hpp  sprite.cpp  sprite.hpp  text.cpp
1.2/src/shaders/: main.frag  text.frag
src/: ast.cpp  ast.hpp  config.cpp  config.hpp  main.cpp  main.hpp  maintenance.cpp  maintenance.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  transform.hpp  window.hpp
src/shaders/: main.frag  main.vert  text.frag  text.vert
